raw-manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.codeforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifactory-ingress
  namespace: artifactory
spec:
  ingressClassName: traefik
  rules:
    - host: artifactory.codeforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artifactory
                port:
                  number: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ingress
  namespace: openbao
spec:
  ingressClassName: traefik
  rules:
    - host: openbao.codeforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-vault
                port:
                  number: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seaweedfs-filer-ingress
  namespace: seaweedfs
spec:
  ingressClassName: traefik
  rules:
    - host: seaweedfs.codeforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seaweedfs-filer
                port:
                  number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtrack-ingress
  namespace: dependency-track
spec:
  ingressClassName: traefik
  rules:
    - host: dtrack.codeforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dependency-track
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.codeforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-dashboard-ingress
  namespace: argo-rollouts
spec:
  ingressClassName: traefik
  rules:
    - host: rollouts.codeforge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-rollouts-dashboard
                port:
                  number: 3100
